# burdock

./: .gitignore  LICENSE  README  Shakefile.hs  build  build.sh  burdock.cabal  changelog
built-ins/: _internals.bur  burdock-syntax.bur  concurrency.bur  either.bur  env.bur  ffi.bur  filesystem.bur  globals.bur  lists.bur  option.bur  process.bur  relational.bur  repl.bur
burdock-test-src/: agdt.bur  arithmetic.bur  basics.bur  binding.bur  boolean.bur  concurrency.bur  construct.bur  curried.bur  demo-test.bur  demo-test1.bur  dynamic-types.bur  either.bur  ffitypes.bur  filesystem.bur  for.bur  imported-tests.bur  include-from-simple-2.bur  include-from-simple-3.bur  include-from-simple.bur  include-simple.bur  letrec.bur  list-basics.bur  lists.bur  methods.bur  module-var.bur  modules-import-simple-2.bur  modules-import-simple-3.bur  modules-import-simple.bur  raise.bur  records.bur  ref.bur  relational-demo.bur  run-all-tests-additional.bur  run-all-tests.bur  shadow.bur  test-exes.bur  test-var-isolation1.bur  test-var-isolation2.bur  testing.bur  trivial-three.bur  (+1 more)
cabal/: buildfromcabaltarball.sh  burdock.cabal  makecabalsdist.sh
data/built-ins/: _internals.bur  globals.bur  temp.bur
docs/: header.html  index.rst  style.css
examples/: ahoy.bur  load-csv-python.bur
misc-build/: makecabalsdist.sh
release-files/: burdock.cabal
src/: BurdockExe.hs  BurdockTests.hs  DemoFFI.hs  rewrite-tests
src/Burdock/: HsConcurrency.hs  Interpreter.hs  Occasional.hs  Parse.hs  Pretty.hs  Relational.hs  Scientific.hs  Syntax.hs  TestData.hs
src/app/: BurdockExe.hs
src/burdock/built-ins/: _internals.bur  _internals2.bur  _internals3.bur  burdock-syntax.bur  concurrency-internals.bur  concurrency.bur  lists.bur  numbers.bur  option.bur  repl.bur  run-tests.bur  testing.bur
src/burdock/tests/: agdt.bur  arithmetic.bur  binding.bur  boolean.bur  built-in-functions.bur  callbacks.bur  callstacks.bur  concurrency-internals.bur  concurrency.bur  construct.bur  curly-lam.bur  demo-trivial-module.bur  dynamic-types.bur  either.bur  ffi-stuff.bur  four-tests.bur  fun.bur  functions.bur  haskell-callback.bur  haskell-module.bur  if_ask.bur  imported-tests.bur  include-from-simple-2.bur  include-from-simple-3.bur  include-from-simple.bur  include-simple.bur  lists.bur  methods.bur  module-tests.bur  module-var.bur  modules-import-simple-2.bur  modules-import-simple-3.bur  modules-import-simple.bur  nothing.bur  option.bur  process.bur  python.bur  raise.bur  ref.bur  relational-demo.bur  (+19 more)
src/burdock/tests/tailcalls/: accum-loop.bur  garbage-loop.bur  non-tail-call-loop.bur  tail-call-loop.bur
src/examples/: DemoFFI.hs
src/haskell/app/: BurdockExe.hs  Main.hs  RunTests.hs  TempRenamer.hs
src/haskell/lib/: PyWrap.hs  pywrap-c.c
src/haskell/lib/Burdock/: Bootstrap.hs  Burdock.hs  DefaultRuntime.hs  DemoHaskellModule.hs  Desugar.hs  HaskellModulePlugin.hs  HsConcurrency.hs  Interpret.hs  Interpreter.hs  InterpreterHandle.hs  InterpreterPretty.hs  InterpreterSyntax.hs  ModuleMetadata.hs  Parse.hs  ParseTests.hs  Pretty.hs  PrettyInterpreter.hs  Rename.hs  RenameAst.hs  RenameTypes.hs  Renamer.hs  RenamerEnv.hs  RenamerTestParser.hs  RenamerTests.hs  Runtime.hs  RuntimeBootstrap.hs  RuntimeBootstrapExtras.hs  Scientific.hs  StaticError.hs  Syntax.hs  System.hs  TestCallstacks.hs  TestHelpers.hs  TestLib.hs  TestWrap.hs  Tests.hs  Utils.hs
src/haskell/lib/Burdock/FFIModules/: Bootstrap.hs  Concurrency.hs  Internals.hs  PythonModulePlugin.hs  Testing.hs  TestingExtras.hs
src/haskell/pywrap/: PyWrap.hs  PyWrapTests.hs  Tests.hs  pywrap.cabal
src/haskell/test/: BurdockTests.hs
src/haskell/test/Burdock/: TestData.hs
src/haskell/tests/Burdock/: ParseTests.hs  RenameTestParser.hs  RenameTests.hs  RenamerTestParser.hs  RenamerTests.hs  TestLib.hs  Tests.hs
src/lib/Burdock/: HsConcurrency.hs  Interpreter.hs  Parse.hs  Pretty.hs  Syntax.hs
src/misc-build/: burdock.cabal  makecabalsdist.sh
src/python/: test-repl.py
src/pywrap/: PyWrap.hs  PyWrapTests.hs  Tests.hs  pywrap-c.c  pywrap.cabal
src/test/: BurdockTests.hs  PyWrapTests.hs
src/test/Burdock/: HsConcurrencyTests.hs  HsOccasionalTests.hs  LiterateTests.hs  TestData.hs  TestTypes.hs
test-data/: trivial-two.bur
test-support/: test-repl.py
tests/: rewrite-tests
