cabal-version:      2.4
name:               burdock
version:            0.1
license:            BSD-3-Clause
license-file:       LICENSE
copyright:          Copyright 2021 Jake Wheat
maintainer:         jakewheat@tutanota.com
author:             Jake Wheat
synopsis:           functional programming language
description:
    functional programming language
    https://github.com/JakeWheat/burdock/

category:           Language
extra-source-files:
    README
    LICENSE

source-repository head
    type:     git
    location: https://github.com/JakeWheat/burdock

common shared-properties
  default-language:    Haskell2010
  build-depends:               base >=4 && <6,
        megaparsec >=9.2.0 && <9.3,
        scientific >=0.3.7.0 && <0.4,
        prettyprinter >=1.7.1 && <1.8,
        text >=1.1.0.0 && <1.3,
        mtl >=2.1.3.1 && <2.3,
        safe-exceptions >=0.1.7.2 && <0.2,
        pretty-show ==1.10.*,
        filepath >=1.3.0.2 && <1.5,

  ghc-options:         -Wall

    
library
  import:              shared-properties
  exposed-modules:         
        Burdock.Interpreter
        Burdock.Parse
        Burdock.Pretty
        Burdock.Syntax
  other-modules:
        Burdock.Scientific
  hs-source-dirs:      src

executable burdock
    import:              shared-properties
    main-is:          BurdockExe.hs
    hs-source-dirs:      src/app

    build-depends:
        burdock,
        haskeline >=0.8.2 && <0.9,
        optparse-applicative >=0.16.1.0 && <0.17,

    ghc-options:         -threaded

