cabal-version:      2.4
name:               burdock
version:            0.1

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    README

common shared-properties
    other-modules:    Burdock.Syntax
                      Burdock.Pretty
                      Burdock.Parse
                      Burdock.Scientific
                      Burdock.Utils
                      Burdock.Burdock
                      Burdock.Interpret
                      Burdock.Runtime
                      Burdock.Desugar
                      Burdock.InterpreterSyntax
                      Burdock.InterpreterPretty
                      Burdock.RenameAst
                      Burdock.Rename
                      Burdock.RenameTypes
                      Burdock.StaticError
                      Burdock.ModuleMetadata
                      Burdock.FFIModules.Bootstrap
                      Burdock.FFIModules.Internals
                      Burdock.FFIModules.TestingExtras
                      Burdock.FFIModules.Testing
                      Burdock.HsConcurrency

    build-depends:    base < 5
                    , scientific
                    , prettyprinter
                    , text
                    , raw-strings-qq
                    , megaparsec
                    , mtl
                    , pretty-show
                    , safe-exceptions 
                    , async
                    , microlens
                    , microlens-th
                    , process
                    , directory
                    , filepath
                    , stm

                    , tasty
                    , tasty-hunit
                    , uniplate

                    , bytestring

    hs-source-dirs:   src/haskell/lib
                    , src/haskell/tests
                    , src/haskell/app

    default-language: Haskell2010
    ghc-options:      -Wall -rtsopts -threaded


common test-modules
    other-modules:    Burdock.Tests
                      Burdock.TestLib
                      Burdock.ParseTests
                      Burdock.RenameTests
                      Burdock.RenameTestParser

executable burdock
    import:           shared-properties
    import:           test-modules
    main-is:          Main.hs

Test-Suite Tests
    import:           shared-properties
    import:           test-modules
    type:             exitcode-stdio-1.0
    main-is:          RunTests.hs
