cabal-version:      2.4
name:               burdock
version:            0.1
license:            BSD-3-Clause
license-file:       LICENSE
copyright:          Copyright 2021-2022 Jake Wheat
maintainer:         jakewheat@tutanota.com
author:             Jake Wheat
synopsis:           functional programming language
description:
    functional programming language
    https://github.com/JakeWheat/burdock/

category:           Language
extra-source-files:
    README
    LICENSE

source-repository head
    type:     git
    location: https://github.com/JakeWheat/burdock

common shared-properties
  default-language:    Haskell2010
  build-depends:               base >=4 && <6,
                               megaparsec,
                               scientific,
                               prettyprinter,
                               text,
                               mtl,
                               safe-exceptions,
                               pretty-show,
                               filepath,
                               exceptions,
                               stm,
                               time,
                               async
                               

  ghc-options:         -Wall

    
library
  import:              shared-properties
  exposed-modules:         
        Burdock.Interpreter
        Burdock.Parse
        Burdock.Pretty
        Burdock.Syntax
        Burdock.Scientific
  other-modules:
        Burdock.Relational
        Burdock.HsConcurrency
  hs-source-dirs:      src/lib


  
executable burdock
    import:              shared-properties
    main-is:          BurdockExe.hs
    hs-source-dirs:      src/app,
                         packages/ffitypes-test/haskell-src,
                         packages/python-ffi/haskell-src,
                         src/pywrap
  other-modules: FFITypesTest
                 PythonFFI
                 PyWrap
  pkgconfig-depends: python3-embed

  build-depends:
        burdock,
        haskeline,
        optparse-applicative,
        raw-strings-qq
  C-sources:           src/pywrap/pywrap-c.c

  ghc-options:         -threaded

